Z-index isssue fixed height added

--- a/public/less/ssb-site-builder/ssb-components/ssb-text.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-text.less
@@ -9,9 +9,6 @@ section.ssb-page-section-layout-1-col-grid{
     div.ssb-text-only:not(:nth-of-type(3)):not(:nth-last-child(2)) div.col-xs-12{
         padding-right: 0px;
         padding-left: 0px;
-        div.slider-overlay-bg{
-            z-index: 2;
-        }
     }
     div.ssb-text-only:nth-of-type(3) div.col-xs-12{
         padding-right: 0px;
@@ -26,5 +23,8 @@ section.ssb-page-section-layout-1-col-grid{
              width: calc(~"100% - 15px");
              margin-right: 15px;
         }
+    }
+    div.slider-overlay-bg{
+            z-index: 2 !important;;
     }
 }
